<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vantagetechnic.wordwidget.Widget.WidgetViewConfigure">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_alignParentTop="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar"
        android:orientation="vertical"
        tools:context="com.vantagetechnic.wordwidget.Widget.WidgetViewConfigure">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/colorPureWhite"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="1dp">

                <TextView
                    android:id="@+id/filename_text"
                    android:textSize="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/file_name"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/dropbox_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="4dp"
                    android:text="@string/dropbox"
                    android:textColor="@color/colorPureWhite"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_marginEnd="7dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintRight_toLeftOf="@+id/device_file"
                    android:layout_marginRight="7dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/device_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="8dp"
                    android:elevation="4dp"
                    android:text="@string/local"
                    android:textColor="@color/colorPureWhite"
                    android:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="7dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/colorPureWhite"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="1dp">

                <TextView
                    android:id="@+id/font_size_text"
                    android:text="@string/font_size_select"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:textSize="16dp"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/select_font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="8dp"
                    android:elevation="4dp"
                    android:text="@string/select_button"
                    android:textColor="@color/colorPureWhite"
                    android:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="7dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/colorPureWhite"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="1dp">

                <TextView
                    android:id="@+id/text_alignment_text"
                    android:text="@string/text_alignment_select"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:textSize="16dp"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/select_text_alignment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="8dp"
                    android:elevation="4dp"
                    android:text="@string/switch_button"
                    android:textColor="@color/colorPureWhite"
                    android:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="7dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/colorPureWhite"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="1dp">

                <TextView
                    android:text="@string/text_color_select"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:textSize="16dp"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp" />

                <View
                    android:id="@+id/text_color_preview"
                    android:layout_width="52dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintRight_toLeftOf="@+id/select_text_color"
                    android:layout_marginRight="8dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/select_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="8dp"
                    android:elevation="4dp"
                    android:text="@string/select_button"
                    android:textColor="@color/colorPureWhite"
                    android:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="7dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/colorPureWhite"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="1dp">

                <TextView
                    android:text="@string/background_color_select"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:textSize="16dp"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp" />

                <View
                    android:id="@+id/background_color_preview"
                    android:layout_width="52dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintRight_toLeftOf="@+id/select_background_color"
                    android:layout_marginRight="8dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/select_background_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="8dp"
                    android:elevation="4dp"
                    android:text="@string/select_button"
                    android:textColor="@color/colorPureWhite"
                    android:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="7dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/colorPureWhite"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="1dp">

                <TextView
                    android:id="@+id/tail_size_text"
                    android:text="@string/tail_size_select"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:textSize="16dp"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/tail_size_enabled"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintRight_toLeftOf="@+id/select_tail_size"
                    android:layout_marginRight="16dp"
                    app:layout_constraintVertical_bias="0.529"
                    android:layout_marginEnd="16dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/select_tail_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="8dp"
                    android:elevation="4dp"
                    android:text="@string/select_button"
                    android:textColor="@color/colorPureWhite"
                    android:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="7dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/colorPureWhite"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="1dp">

                <TextView
                    android:id="@+id/text_refresh"
                    android:text="@string/refresh_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:textSize="16dp"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/select_refresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="8dp"
                    android:elevation="4dp"
                    android:text="@string/select_button"
                    android:textColor="@color/colorPureWhite"
                    android:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="7dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:elevation="4dp"
        android:text="@string/save_button"
        android:textColor="@color/colorPureWhite"
        android:backgroundTint="@color/colorAccent" />

</RelativeLayout>